@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.3                                              RELEASED: MMM DD YYYY
 
+	- new method Fl::scheme_is(const char *name) returns 1 if current scheme is name.
 	- Fixed recent MinGW build WRT configure not finding strcasecmp() (STR #2994).
 	  Note: This fix is temporary and should be revisited later.
 	- Fixed missing libdl dependency in CMake builds (STR #2977).
